<resources>
    <string name="app_name">RPSLS</string>
    <string name="main_activity_name">
        Rock, paper, scissors, lizard, spock
    </string>
    <string name="action_settings">Settings</string>
    <string name="rules_title">Game rules</string>
    <string name="rules_scissors_paper">
        Scissors cut paper
    </string>
    <string name="rules_paper_rock">
        Paper covers rock
    </string>
    <string name="rules_rock_lizard">
        Rock kills lizard
    </string>
    <string name="rules_lizard_spock">
        Lizard poisons spock
    </string>
    <string name="rules_spock_scissors">
        Spock smashes scissors
    </string>
    <string name="rules_scissors_lizard">
        scissors decapitates lizard
    </string>
    <string name="rules_lizard_paper">
        Lizard eats paper
    </string>
    <string name="rules_paper_spock">
        Paper disproves spock
    </string>
    <string name="rules_spock_rock">
        Spock vaporizes rock
    </string>
    <string name="rules_rock_scissors">
        Rock crushes scissors
    </string>

    <!-- SelectionActivity -->
    <string name="selection_activity_label">
        Game is starting!
    </string>

    <!-- Game Strings -->
    <string name="game_draw">
        Draw!
    </string>
    <string name="game_win">
        Wins!
    </string>
    <string name="game_lost">
        Lost!
    </string>
    <string name="game_player">
        Player
    </string>
    <string name="game_android">
        Android
    </string>
    <string name="game_choice_scissors">
        Scissors
    </string>
    <string name="game_choice_rock">
        Rock
    </string>
    <string name="game_choice_paper">
        Paper
    </string>
    <string name="game_choice_spock">
        Spock
    </string>
    <string name="game_choice_lizard">
        Lizard
    </string>
    <string name="result_image">
        img_result
    </string>
</resources>
