<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PaddingInside"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        style="@style/Rules.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_title"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_scissors_paper"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_paper_rock"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_rock_lizard"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_lizard_spock"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_spock_scissors"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_scissors_lizard"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_lizard_paper"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_paper_spock"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_spock_rock"/>
    <TextView
        style="@style/RulesBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_rock_scissors"/>
</LinearLayout>